--- a/docker_setup.yml
+++ b/docker_setup.yml
@@ -48,7 +48,7 @@
         name: docker
 
     - name: Add remote user to "docker" group
-     # remote_user: {{ ansible_user }}
+      remote_user: "{{ ansible_user }}"
       user:
         name: "{{ ansible_user }}"
         group: "docker"
@@ -58,7 +58,7 @@
 
     # docker-compose is installed for root and root group. Should be docker?
     - name: Install docker-compose
-      #remote_user: {{ ansible_user }}
+      remote_user: "{{ ansible_user }}"
       get_url: 
         url : https://github.com/docker/compose/releases/download/1.25.1-rc1/docker-compose-Linux-x86_64
         dest: /usr/local/bin/docker-compose
