--- a/docker_setup.yml
+++ b/docker_setup.yml
@@ -47,6 +47,10 @@
       pip:
         name: docker
 
+    - name: Install Docker-Compose Module for Python
+      pip:
+        name: docker-compose
+
     - name: Add remote user to "docker" group
       remote_user: "{{ ansible_user }}"
       user:
@@ -64,7 +68,25 @@
         dest: /usr/local/bin/docker-compose
         group: docker
         mode: 'u+x,g+x'
-      
+
+#    - name: Check current docker-compose version
+#      command: docker-compose --version
+#      register: docker_compose_vsn
+#      changed_when: false
+#     # failed_when: false
+#      check_mode: no
+#
+#    - set_fact:
+#        docker_compose_current_version: "{{ docker_compose_vsn.stdout | regex_search('(\\d+(\\.\\d+)+)') }}"
+#      when:
+#        - docker_compose_vsn.stdout is defined
+#
+#    - name: Tear down existing services
+#      community.docker.docker_compose:
+#        project_src: nextcloud
+#        state: absent
+#      become: yes
+
     - name: Pull default Docker image
       community.docker.docker_image:
         name: "{{ default_container_image }}"
