--- a/nextcloud/docker-compose.yml
+++ b/nextcloud/docker-compose.yml
@@ -1,43 +1,36 @@
-version: '3' 
+version: "3"
 
 services:
-
-  proxy:
-    image: jwilder/nginx-proxy:alpine
-    labels:
-      - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true"
-    container_name: nextcloud-proxy
-    networks:
-      - nextcloud_network
+  nextcloud:
+    image: nextcloud:latest
+    restart: unless-stopped
     ports:
       - 80:80
-      - 443:443
-    volumes:
-      - ./proxy/conf.d:/etc/nginx/conf.d:rw
-      - ./proxy/vhost.d:/etc/nginx/vhost.d:rw
-      - ./proxy/html:/usr/share/nginx/html:rw
-      - ./proxy/certs:/etc/nginx/certs:ro
-      - /etc/localtime:/etc/localtime:ro
-      - /var/run/docker.sock:/tmp/docker.sock:ro
-    restart: unless-stopped
-  
-  letsencrypt:
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: nextcloud-letsencrypt
-    depends_on:
-      - proxy
+    environment:
+      - MYSQL_HOST=mysql
+      - MYSQL_DATABASE=nextcloud
+      - MYSQL_USER=nextcloud
+      - MYSQL_PASSWORD=nextcloud
+#      - LETSENCRYPT_HOST=nextcloud.coulter.ninja
+#      - VIRTUAL_HOST=nextcloud.coulter.ninja
     networks:
       - nextcloud_network
     volumes:
-      - ./proxy/certs:/etc/nginx/certs:rw
-      - ./proxy/vhost.d:/etc/nginx/vhost.d:rw
-      - ./proxy/html:/usr/share/nginx/html:rw
-      - /etc/localtime:/etc/localtime:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    restart: unless-stopped
+      - nextcloud:/var/www/html
+
+  #mysql:
+  #  image: mysql:8.0
+  #  restart: unless-stopped
+  #  environment:
+  #    - MYSQL_DATABASE=nextcloud
+  #    - MYSQL_USER=nextcloud
+  #    - MYSQL_PASSWORD=nextcloud
+  #    - MYSQL_ROOT_PASSWORD=nextcloud
+  #  volumes:
+  #    - mysql:/var/lib/mysql
 
   db:
-    image: mariadb
+    image: mariadb:latest
     container_name: nextcloud-mariadb
     networks:
       - nextcloud_network
@@ -45,37 +38,19 @@ services:
       - db:/var/lib/mysql
       - /etc/localtime:/etc/localtime:ro
     environment:
-      - MYSQL_ROOT_PASSWORD=toor
-      - MYSQL_PASSWORD=mysql
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
+      - MYSQL_PASSWORD=nextcloud
+      - MYSQL_ROOT_PASSWORD=nextcloud
     restart: unless-stopped
   
-  app:
-    image: nextcloud:latest
-    container_name: nextcloud-app
-    networks:
-      - nextcloud_network
-    depends_on:
-      - letsencrypt
-      - proxy
-      - db
-    volumes:
-      - nextcloud:/var/www/html
-      - ./app/config:/var/www/html/config
-      - ./app/custom_apps:/var/www/html/custom_apps
-      - ./app/data:/var/www/html/data
-      - ./app/themes:/var/www/html/themes
-      - /etc/localtime:/etc/localtime:ro
-    environment:
-      - VIRTUAL_HOST=nextcloud.YOUR-DOMAIN
-      - LETSENCRYPT_HOST=nextcloud.YOUR-DOMAIN
-      - LETSENCRYPT_EMAIL=YOUR-EMAIL
-    restart: unless-stopped
-
 volumes:
+#  mysql:
   nextcloud:
+    external: true
   db:
 
 networks:
   nextcloud_network:
+    external: true
+
