--- a/roles/nextcloud/tasks/main.yml
+++ b/roles/nextcloud/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
-- name: Find out playbook's path
-  shell: pwd
-  register: playbook_path_output
-- debug: var=playbook_path_output.stdout
+# - name: Find out playbook's path
+#   shell: pwd
+#   register: playbook_path_output
+# - debug: var=playbook_path_output.stdout
 
 - name: Copy content of directory 'files'
   copy:
-    src: nextcloud/ #/    # note the '/' <-- !!!
+    src:  ../files/ #docker-compose.yml
     dest: nextcloud # "{{ playbook_dir }}/" #/tmp/files/
 
 - name: Create a network
