--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -42,14 +42,19 @@
   pip:
     name: docker-compose
 
-- name: Add remote user to "docker" group
-  remote_user: "{{ ansible_user }}"
+- name: adding existing user '{{ ansible_user }}' to group docker
   user:
-    name: "{{ ansible_user }}"
-    group: "docker"
+    name: '{{ ansible_user }}'
+    groups: docker
     append: yes
-  tags:
-    - docker
+# - name: Add remote user to "docker" group
+#   remote_user: "{{ ansible_user }}"
+#   user:
+#     name: "{{ ansible_user }}"
+#     group: "docker"
+#     append: yes
+#   tags:
+#     - docker
 
 # docker-compose is installed for root and root group. Should be docker?
 - name: Install docker-compose
@@ -79,15 +84,15 @@
 #        state: absent
 #      become: yes
 
-- name: Pull default Docker image
-  community.docker.docker_image:
-    name: "{{ default_container_image }}"
-    source: pull
+# - name: Pull default Docker image
+#   community.docker.docker_image:
+#     name: "{{ default_container_image }}"
+#     source: pull
 
-- name: Create default containers
-  community.docker.docker_container:
-    name: "{{ default_container_name }}{{ item }}"
-    image: "{{ default_container_image }}"
-    command: "{{ default_container_command }}"
-    state: present
-  with_sequence: count={{ container_count }}
+# - name: Create default containers
+#   community.docker.docker_container:
+#     name: "{{ default_container_name }}{{ item }}"
+#     image: "{{ default_container_image }}"
+#     command: "{{ default_container_command }}"
+#     state: present
+#   with_sequence: count={{ container_count }}
