--- a/roles/nextcloud/files/docker-compose.yml
+++ b/roles/nextcloud/files/docker-compose.yml
@@ -4,10 +4,12 @@ services:
   nextcloud:
     image: nextcloud:latest
     restart: unless-stopped
+    # container_name: nextcloud
     ports:
       - 80:80
+      
     environment:
-      - MYSQL_HOST=mysql
+      - MYSQL_HOST=db
       - MYSQL_DATABASE=nextcloud
       - MYSQL_USER=nextcloud
       - MYSQL_PASSWORD=nextcloud
@@ -16,26 +18,15 @@ services:
     networks:
       - nextcloud_network
     volumes:
-      - nextcloud:/var/www/html
-
-  #mysql:
-  #  image: mysql:8.0
-  #  restart: unless-stopped
-  #  environment:
-  #    - MYSQL_DATABASE=nextcloud
-  #    - MYSQL_USER=nextcloud
-  #    - MYSQL_PASSWORD=nextcloud
-  #    - MYSQL_ROOT_PASSWORD=nextcloud
-  #  volumes:
-  #    - mysql:/var/lib/mysql
+      - /mnt/nextcloud/html:/var/www/html
 
   db:
     image: mariadb:latest
-    container_name: nextcloud-mariadb
+    container_name: nextcloud-maria-db
     networks:
       - nextcloud_network
     volumes:
-      - db:/var/lib/mysql
+      - /mnt/nextcloud/db:/var/lib/mysql
       - /etc/localtime:/etc/localtime:ro
     environment:
       - MYSQL_DATABASE=nextcloud
@@ -43,12 +34,8 @@ services:
       - MYSQL_PASSWORD=nextcloud
       - MYSQL_ROOT_PASSWORD=nextcloud
     restart: unless-stopped
-  
-volumes:
-#  mysql:
-  nextcloud:
-    external: true
-  db:
+
+  # c=$(docker ps -q) && [[ $c ]] && docker kill $c
 
 networks:
   nextcloud_network:
