--- a/roles/nextcloud/files/docker-compose.yml
+++ b/roles/nextcloud/files/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     # container_name: nextcloud
     ports:
       - 80:80
-      
     environment:
       - MYSQL_HOST=db
       - MYSQL_DATABASE=nextcloud
@@ -18,7 +17,20 @@ services:
     networks:
       - nextcloud_network
     volumes:
-      - /mnt/nextcloud/html:/var/www/html
+      - nextcloud:/var/www/html
+      # - /mnt/nextcloud/html:/var/www/html
+
+
+  #mysql:
+  #  image: mysql:8.0
+  #  restart: unless-stopped
+  #  environment:
+  #    - MYSQL_DATABASE=nextcloud
+  #    - MYSQL_USER=nextcloud
+  #    - MYSQL_PASSWORD=nextcloud
+  #    - MYSQL_ROOT_PASSWORD=nextcloud
+  #  volumes:
+  #    - mysql:/var/lib/mysql
 
   db:
     image: mariadb:latest
@@ -26,7 +38,8 @@ services:
     networks:
       - nextcloud_network
     volumes:
-      - /mnt/nextcloud/db:/var/lib/mysql
+      - nextcloud_db:/var/lib/mysql
+      # - /mnt/nextcloud/db:/var/lib/mysql
       - /etc/localtime:/etc/localtime:ro
     environment:
       - MYSQL_DATABASE=nextcloud
@@ -34,8 +47,14 @@ services:
       - MYSQL_PASSWORD=nextcloud
       - MYSQL_ROOT_PASSWORD=nextcloud
     restart: unless-stopped
-
   # c=$(docker ps -q) && [[ $c ]] && docker kill $c
+
+volumes:
+# #  mysql:
+  nextcloud:
+    external: true
+  nextcloud_db:
+    # external: true
 
 networks:
   nextcloud_network:
