--- a/roles/nextcloud_2/tasks/main.yml
+++ b/roles/nextcloud_2/tasks/main.yml
@@ -3,19 +3,7 @@
   docker_network:
     name: nextcloud_network
 
-- name: Make sure the MariaDB container is created and running
-  docker_container:
-    name: "nextcloud-mariadb"
-    image: "mariadb:latest"
-    pull: yes
-    networks:
-      # - name: swag_public_macvlan
-      - name: nextcloud_network
-    command: "--transaction-isolation=READ-COMMITTED --binlog-format=ROW --skip-innodb-read-only-compressed --innodb-read-only-compressed=OFF"
-    state: 'started'
-    env:
-      "PUID": "{{ guid }}"
-      "PGID": "{{ guid }}"
+ "PGID": "{{ guid }}"
       "TZ": "{{ timezone }}"
       "MYSQL_ROOT_PASSWORD": "{{ mysql_root_password }}"
       "MYSQL_DATABASE": "{{ mysql_db }}"
@@ -35,7 +23,19 @@
     state: 'started'
     restart_policy: unless-stopped
  
-- name: Make sure the Nextcloud container is created and running
+- name: Make sure - name: Make sure the MariaDB container is created and running
+  docker_container:
+    name: "nextcloud-mariadb"
+    image: "mariadb:latest"
+    pull: yes
+    networks:
+      # - name: swag_public_macvlan
+      - name: nextcloud_network
+    command: "--transaction-isolation=READ-COMMITTED --binlog-format=ROW --skip-innodb-read-only-compressed --innodb-read-only-compressed=OFF"
+    state: 'started'
+    env:
+      "PUID": "{{ guid }}"
+     the Nextcloud container is created and running
   docker_container:
     name: "{{ container_name }}"
     image: "ghcr.io/linuxserver/nextcloud:php8"
