--- a/roles/radarr/defaults/main.yml
+++ b/roles/radarr/defaults/main.yml
@@ -6,8 +6,8 @@ url: "radarr.{{ host_local }}"
 homer_category: media
 
 ip_address: "{{ swag_base }}.5"
-# TODO: Figure out a better solution for shared media volumes
-mergerfs_root: "./sonarr/"
+
+data_root: /mnt/data
 docker_dir: /opt/docker/data
 
 
