--- a/roles/nfs/defaults/main.yml
+++ b/roles/nfs/defaults/main.yml
@@ -2,3 +2,8 @@ mynfs: "192.168.1.54:/volume1/nextcloud"
 mountpoint: "/mnt/nextcloud"
 permission: '0777'
 myopts: 'rw,sync'
+
+data_nfs: "192.168.1.54:/volume1/data"
+data_mountpoint: "/mnt/data"
+data_permission: '0777'
+data_opts: 'rw,sync'
