--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -14,8 +14,8 @@
     #   - TZ=Europe/Madrid
     volumes:
       - ./radarr_config:/config
-      - "{{ mergerfs_root }}/data/media/anime:/anime"
-      - "{{ mergerfs_root }}/data/media/tvshows:/tvshows"
-      - "{{ mergerfs_root }}/data/transmission/downloads/complete:/downloads/complete"
+      - "{{ data_root }}/media/anime:/anime"
+      - "{{ data_root }}/media/tvshows:/tvshows"
+      - "{{ data_root }}/transmission/downloads/complete:/downloads/complete"
     restart_policy: unless-stopped
 
