--- a/roles/portainer/defaults/main.yml
+++ b/roles/portainer/defaults/main.yml
@@ -1,12 +1,13 @@
 ---
-container_name: jellyfin
+container_name: radarr
 
-url: "jellyfin.{{ host_local }}"
+url: "radarr.{{ host_local }}"
 
 homer_category: media
 
 ip_address: "{{ swag_base }}.5"
-data_root: "/mnt/data"
+
+data_root: /mnt/data
 docker_dir: /opt/docker/data
 
 
