--- a/run.yml
+++ b/run.yml
@@ -1,5 +1,10 @@
 ---
 - hosts: all
+
+  vars_files:
+    - ./vars/vault.yml
+    - ./vars/vars.yml
+  
   become: true
 
   roles:
@@ -22,6 +27,10 @@
     - role: docker
       tags:
         - docker
+
+    - role: gluetun  
+      tags:
+        - gluetun
 
     - role: nextcloud
       tags:
@@ -60,23 +69,21 @@
       tags:
         - prowlarr
 
-    # - role: transmission  
-    #   tags:
-    #     - transmission
-
-    - role: transmission-openvpn 
+    - role: transmission  
       tags:
-        - transmission-openvpn
+        - transmission
+
+    # - role: transmission-openvpn 
+    #   tags:
+    #     - transmission-openvpn
 
 # sonarr if for tv
 # radarr is for movies
 # filebot renames so jellyfin can serve appropriately (not free)
 # utorrent 
 
-#deluge ?
 
-# TODO: add portainer
-# TODO: add gleutun vpn for transmission and prowlarr
+# TODO: wire containers through gluetun 
 
 # indexer 
 
