--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -18,6 +18,10 @@
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
+      # No idea how to actually set these
+      TRANSMISSION_WEB_UI: transmission-web-control
+      TRANSMISSION_RATIO_LIMIT_ENABLED: "true"
+      TRANSMISSION_DOWNLOAD_QUEUE_SIZE: "10"
     volumes:
       - ./transmission:/config
       - "{{ data_root }}/transmission/downloads:/downloads"
