--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -20,3 +20,5 @@ portainer_ip: 172.18.0.7
 transmission_ip: 172.18.0.8
 bazarr_ip: 172.18.0.9
 plex_ip: 172.18.0.10
+deluge_ip: 172.18.0.11
+qbittorrent_ip: 172.18.0.12
