--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -20,6 +20,7 @@
       - "{{ data_root }}/media/movies:/movies"
       - "{{ data_root }}/media/anime:/anime"
       - "{{ data_root }}/media/tvshows:/tvshows"
+      # - "{{ data_root }}/qbittorrent/downloads:/downloads"
       - "{{ data_root }}/transmission/downloads/complete:/downloads/complete"
     restart_policy: unless-stopped
 
