--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -22,3 +22,5 @@ bazarr_ip: 172.18.0.9
 plex_ip: 172.18.0.10
 deluge_ip: 172.18.0.11
 qbittorrent_ip: 172.18.0.12
+readarr_ip: 172.18.0.13
+lidarr_ip: 172.18.0.14
