--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -7,16 +7,21 @@
     networks:
       - name: media_network
         ipv4_address: "{{ transmission_ip }}"
-    ports:
+    ports: # handled by gluetun?
       - 9091:9091
       - 51413:51413
       - 51413:51413/udp
     pull: yes
+    # network_mode: "container:gluetun"
     state: 'started'
     env:
       PUID: "{{ puid }}"
       PGID: "{{ pgid }}"
       TZ: "{{ timezone }}"
+      # No idea how to actually set these
+      TRANSMISSION_WEB_UI: transmission-web-control
+      TRANSMISSION_RATIO_LIMIT_ENABLED: "true"
+      TRANSMISSION_DOWNLOAD_QUEUE_SIZE: "10"
     volumes:
       - ./transmission:/config
       - "{{ data_root }}/transmission/downloads:/downloads"
