--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -24,3 +24,8 @@ deluge_ip: 172.18.0.11
 qbittorrent_ip: 172.18.0.12
 readarr_ip: 172.18.0.13
 lidarr_ip: 172.18.0.14
+
+loki_ip: 172.18.0.15
+promtail_ip: 172.18.0.16
+prometheus_ip: 172.18.0.17
+grafana_ip: 172.18.0.18
