--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -29,3 +29,5 @@ loki_ip: 172.18.0.15
 promtail_ip: 172.18.0.16
 prometheus_ip: 172.18.0.17
 grafana_ip: 172.18.0.18
+
+homeassistant_ip: 172.18.0.19
